--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,9 @@ services:
       - "8080:8080"
     volumes:
       - ./data:/app/data
+      - ./backend/config.json:/app/config.json:ro
     environment:
       - DB_PATH=/app/data/finance.db
       - GIN_MODE=release
+      - CORS_ORIGINS=http://localhost:5300,http://localhost:5173
     restart: unless-stopped
